# ariax

./: README.md  pyproject.toml
app/: app.py
app/components/: config_window.py  connection_panel.py  download_panel.py  log_window.py  task_list.py
app/lib/: aria2.py  path_manager.py
